<resources>
    <string name="app_name">sprint</string>
    <string name="image_logo_des">sprint logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_btn_txt">LOGIN</string>
    <string name="reg_btn">Do\'t have an account? Register</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username_hint">Username</string>
    <string name="mandatory_field">Mandatory Field</string>
</resources>
